
- Implemented FR#35638 (Adding udate to imap_fetch_overview results).
  (Charles_Duffy at dell dot com )
- Fixed possible buffer overflows in mysqlnd_list_fields,  mysqlnd_change_user.
  (Andrey)
- Fixed possible buffer overflows when handling error packets in mysqlnd.
  Reported by Stefan Esser. (Andrey)
- Fixed very rare memory leak in mysqlnd, when binding thousands of columns.
  (Andrey)

- Fixed a possible information leak because of interruption of XOR operator.
  Reported by Stefan Esser (Dmitry)
- Fixed a possible memory corruption because of unexpected call-time pass by
  refernce and following memory clobbering through callbacks.
  Reported by Stefan Esser (Dmitry)
- Fixed a possible memory corruption in ArrayObject::uasort() Reported by
  Stefan Esser (Dmitry)
- Fixed a possible memory corruption in parse_str(). Reported by Stefan Esser
  (Dmitry)
- Fixed a possible memory corruption in pack(). Reported by Stefan Esser
  (Dmitry)
- Fixed a possible memory corruption in substr_replace(). Reported by Stefan    
  Esser (Dmitry)
- Fixed a possible memory corruption in addcslashes(). Reported by Stefan    
  Esser (Dmitry)
- Fixed a possible stack exhaustion inside fnmatch(). Reported by Stefan    
  Esser (Ilia)
- Fixed a possible dechunking filter buffer overflow. Reported by Stefan Esser.
  (Pierre)
- Fixed a possible arbitrary memory access inside sqlite extension. Reported 
  by Mateusz Kocielski. (Ilia)
- Fixed string format validation inside phar extension. Reported by Stefan
  Esser (Ilia)
- Fixed handling of session variable serialization on certain prefix
  characters. Reported by Stefan Esser (Ilia)
- Fixed a NULL pointer dereference when processing invalid XML-RPC
  requests (Fixes CVE-2010-0397, bug #51288). (Raphael Geissert)
- Fixed 64-bit integer overflow in mhash_keygen_s2k(). (Clément LECIGNE, Stas)

- Fixed bug #51791 (constant() aborts execution when fail to check undefined
  constant). (Felipe)